--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     padding: 0;
     border: 0;
     box-sizing: border-box;
+    font-family: 'EB Garamond', serif;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: 'Karla', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .grid-container {
@@ -10,17 +14,20 @@
     height: 100vh;
     width: 100%;
     grid-template-areas:
-    'sidebar menu menu'
-    'sidebar menu menu'
-    'sidebar body body';
+    'sidebar menu'
+    'sidebar menu'
+    'sidebar body';
     grid-template-rows: auto auto 5fr;
-    grid-template-columns: 2fr 4fr 4fr;
+    grid-template-columns: 2fr 5fr;
 }
 
 .sidebar {
     grid-area: sidebar;
-    background-color: steelblue;
-    padding: 120px;
+    background-color: #fbcfe8;
+    display: grid;
+    grid-template-rows: auto auto 1fr;
+    gap: 20px;
+    color: black;
 }
 
 .menu {
@@ -32,4 +39,46 @@
 .body {
     grid-area: body;
     background-color: black;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.logo {
+    margin-top: 40px;
+    display: flex;
+    height: 70px;
+    text-align: center;
+    width: 100%;
+    padding-left: 15px;
+    padding-top: 20px;
+    gap: 10px;
+    border-bottom: 2px solid black;
+}
+
+.logo img {
+    height: 30px;
+    width: 30px;
+    display: block;
+}
+
+.profile img,
+.settings img {
+    height: 20px;
+    width: 20px;
+}
+
+
+.box {
+    display: flex;
+    gap: 20px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+.profile p:hover,
+.settings p:hover {
+    border-bottom: 3px solid white;
+    letter-spacing: 1px;
 }
